Fix always show scrollbar on nav-menu search-result

--- a/src/core/nav/nav-menu.module.scss
+++ b/src/core/nav/nav-menu.module.scss
@@ -215,6 +215,11 @@
 .items {
   display: flex;
   flex-direction: column;
+  &:not(:hover) {
+    &::-webkit-scrollbar-thumb {
+      background: var(--scrollbar-color);
+    }
+  }
 }
 
 .subItems {
